2010-01-24  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidSwitchStatementsRule.cs: Ignore all generated code since 
	their name will be compiler dependant. Fix unit test under Windows
	(well when compiled with CSC)

2009-07-07  Jesse Jones  <jesjones@mindspring.com>

	* *Rule.cs: Edited most of the rule descriptions.

2009-02-23  Néstor Salceda  <nestor.salceda@gmail.com>

	* AvoidSpeculativeGeneralityRule.cs: Fix a typo.  Thanks to Mat
	Steeples.

2008-12-22  Néstor Salceda  <nestor.salceda@gmail.com>

	* AvoidSwitchStatementsRule.cs: Added the code for handling the
	table-driven switches.

2008-12-22  Néstor Salceda  <nestor.salceda@gmail.com>

	* AvoidSwitchStatementsRule.cs: Fix some typos.  Thanks Sebastien !!

2008-12-22  Néstor Salceda  <nestor.salceda@gmail.com>

	* AvoidSwitchStatementsRule.cs: New.  Rule for avoid the switch
	statments smell.
	* Makefile.am: Add tests and rule to the build.

2008-12-17  Néstor Salceda  <nestor.salceda@gmail.com>

	* AvoidLongParameterListsRule.cs: Remove the extra checking which only
	introduces confussion.

2008-12-17  Néstor Salceda  <nestor.salceda@gmail.com>

	* AvoidCodeDuplicatedInSameClassRule.cs: Use the new nose for its
	checkings.
	* AvoidCodeDuplicatedInSiblingClassesRule.cs: Use the new nose for its
	checkings.
	* CodeDuplicatedLocator.cs: Use the new algorithm in this code.
	* ExpressionCollection.cs: Removed the old system.
	* ExpressionFillerVisitor.cs: Removed the old system.
	* InstructionMatcher.cs: The new nose.
	* Makefile.am: Adjust the changes to the build system.
	* Pattern.cs: An abstraction for a pattern of instructions.  The common
	patterns (Disposables, foreach, returns ...) are here in order to check
	if a pattern can be extracted.

2008-12-15  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidCodeDuplicatedInSameClassRule.cs: Use IsEnum, IsInterface
	and HasMethods
	* AvoidCodeDuplicatedInSiblingClassesRule.cs: Use HasMethods,
	IsEnum and IsInterface